--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll", 
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -34,5 +33,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.0",
+    "babel-jest": "^29.2.1",
+    "jest": "^27.5.1",
+    "jest-environment-jsdom": "^29.2.1",
+    "whatwg-fetch": "^3.6.2"
   }
 }
